update UI lebih bagus

--- a/frontend/src/style.css
+++ b/frontend/src/style.css
@@ -1,1 +1,5 @@
 @import "tailwindcss";
+@import url('https://fonts.cdnfonts.com/css/alhambra');
+@theme {
+    --font-alhambra: "Alhambra", sans-serif;
+}
